# Wiki7

./: .env.example  .gitignore  .gitmodules  BACKLOG.md  CONTRIBUTING.md  LICENSE  Makefile  PLAN.md  README.md  plan.md
cdk/: README.md  cdk.context.json  cdk.json  package-lock.json  package.json  pyproject.toml
data/: BOT_SETUP.md  Dockerfile.scraper  README.md  TODO.md  docker-compose.yml  pyproject.toml  run_pipeline.py
data/data-pipeline/: Dockerfile  README.md  pyproject.toml
data/data-pipeline/data_pipeline/: config.py  export.py  extract.py  fetch.py  main.py
data/data-pipeline/data_pipeline/data/: players.json
data/data_pipeline/: apply_hebrew_mapping.py  auto_translate_hebrew.py  data_relationships.mermaid  generate_mapping_stub.py  helpers.py  merge_seasons.py  normalize_enrich_players.py  normalize_players.py  schemas.py
data/tests/: test_helpers.py  test_merge.py  test_normalize.py  test_schemas.py  test_stats_spider.py  test_wiki_import.py
data/tests/fixtures/: leistungsdaten_sample.html  matches_sample.json  players_sample.json  squad_sample.json  stats_sample.json
data/tmk-scraper/: .gitignore
data/tmk-scraper/tmk_scraper/: items.py  middlewares.py  pipelines.py  settings.py
data/tmk-scraper/tmk_scraper/spiders/: coach_spider.py  fixtures_spider.py  honours_spider.py  match_spider.py  player_spider.py  records_spider.py  squad_spider.py  stadium_spider.py  stats_spider.py  transfers_spider.py
data/tmk_scraper/: scrapy.cfg
data/tmk_scraper/output/: players.json
data/tmk_scraper/tmk_scraper/: middlewares.py  pipelines.py  settings.py
data/tmk_scraper/tmk_scraper/spiders/: player_spider.py  squad_spider.py
data/transfermarkt-api/app/schemas/: base.py
data/transfermarkt-api/app/services/: base.py
data/transfermarkt-scraper/: .gitignore  pyproject.toml
data/transfermarkt-scraper/tfmkt/: settings.py
data/transfermarkt-scraper/tfmkt/spiders/: competitions.py  players.py
data/wiki_import/: __init__.py  import_matches.py  import_players.py  import_templates.py
data/wiki_import/mediawiki_templates/: Coach_infobox.wikitext  Kit_infobox.wikitext  Match_infobox.wikitext  Museum_item_infobox.wikitext  Player_infobox.wikitext  Season_infobox.wikitext  Stadium_infobox.wikitext  Tooltip.wikitext  Trophy_infobox.wikitext
data/wiki_import/templates/: attendance.j2  coach_page.j2  competition_season.j2  honours_page.j2  leaderboard.j2  match_report.j2  player_page.j2  records_page.j2  season_overview.j2  squad_table.j2  stadium_page.j2  transfer_table.j2
docker/: .dockerignore  .htaccess  Dockerfile  LocalSettings.php  cargo-repopulate.php  docker-compose.override.yml  docker-compose.yml  docker-entrypoint.sh  import-pages.php
docs/: CHANGELOG.md  DEPLOYMENT.md  INFRASTRUCTURE.md  RUNBOOK.md  SECURITY.md  SETUP.md  SKIN-DEVELOPMENT.md  TROUBLESHOOTING.md  (+2 more)
(+551 files in other folders)
