[tool.poetry]
name = "wiki7-data"
version = "0.1.0"
description = ""
authors = ["Tzahi Argaman <tzahi.argaman@cyberark.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scrapy = "^2.13.0"
scrapy-fake-useragent = "^1.4.4"
pydantic = "^2.11.5"
tqdm = "^4.67.1"
python-dateutil = "^2.9.0.post0"
pycountry = "^24.6.1"
pyyaml = "^6.0.2"
mwclient = "^0.11.0"
jinja2 = "^3.1"
click = "^8.1"
tenacity = "^9.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-mock = "^3.12"
pytest-cov = "^4.1"
ruff = "^0.3"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py312"
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
