[tool.poetry]
name = "transfermarkt-scraper"
version = "0.1.0"
description = ""
authors = ["Tzahi Argaman <tzahi.argaman@cyberark.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
playwright = "^1.52.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
